--- a/index.html
+++ b/index.html
@@ -49,12 +49,34 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+
+                        <div class="carousel-caption">
+                            <h1>Best Online Education Expertise</h1>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.
+                            </p>
+                            <div class="btn btn-info">Get Started</div>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/course/cover-2.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                            <h1>Best Online Education Expertise</h1>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.
+                            </p>
+                            <div class="btn btn-info">Get Started</div>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                            <h1>Best Online Education Expertise</h1>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.
+                            </p>
+                            <div class="btn btn-info">Get Started</div>
+                        </div>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -82,7 +104,108 @@
                 Consonantia, there live
                 the blind texts.</p>
 
+
+
+
+            <div class="row gy-2">
+
+                <div class="col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
+
+
+                    <img class="img-fluid" src="images/course/course-2.png" alt="">
+
+                    <div class="p-3 bg-light rounded">
+                        <h4>Fundamental Of UI/UX Design</h4>
+                        <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                        <h5 class="text-primary fw-bold">Price : 20$</h5>
+                    </div>
+                </div>
+
+                <div class=" col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
+
+
+                    <img class="img-fluid" src="images/course/course-3.png" alt="">
+
+                    <div class="p-3 bg-light rounded-end">
+                        <h4>Fundamental Of UI/UX Design</h4>
+                        <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                        <h5 class="text-primary fw-bold">Price : 20$</h5>
+                    </div>
+                </div>
+                <div class=" col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
+
+
+                    <img class="img-fluid" src="images/course/course-4.png" alt="">
+
+                    <div class="p-3 bg-light rounded-end">
+                        <h4>Fundamental Of UI/UX Design</h4>
+                        <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                        <h5 class="text-primary fw-bold">Price : 20$</h5>
+                    </div>
+                </div>
+                <div class=" col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
+
+
+                    <img class="img-fluid" src="images/course/course-5.png" alt="">
+
+                    <div class="p-3 bg-light rounded-end">
+                        <h4>Fundamental Of UI/UX Design</h4>
+                        <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                        <h5 class="text-primary fw-bold">Price : 20$</h5>
+                    </div>
+                </div>
+                <div class=" col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
+
+
+                    <img class="img-fluid" src="images/course/course-6.png" alt="">
+
+                    <div class="p-3 bg-light rounded-end">
+                        <h4>Fundamental Of UI/UX Design</h4>
+                        <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                        <h5 class="text-primary fw-bold">Price : 20$</h5>
+                    </div>
+                </div>
+                <div class=" col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
+
+
+                    <img class="img-fluid" src="images/course/course-1.png" alt="">
+
+                    <div class="p-3 bg-light rounded-end">
+                        <h4>Fundamental Of UI/UX Design</h4>
+                        <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                        <h5 class="text-primary fw-bold">Price : 20$</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center my-5">
+                <div class="btn btn-info">See More Courses</div>
+            </div>
         </section>
+
+        <section class="mv container bg-info d d-flex align-items-center justify-content-center py-5 rounded">
+            <div class="mx-5">
+                <h1 class="text-white">Ready to join?</h1>
+                <p class="text-white">If you like our institution,you should join with us</p>
+                <div class="btn btn-light">Register Now</div>
+            </div>
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
