register button added

--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
                 <div class="btn btn-info">See More Courses</div>
             </div>
         </section>
-
-        <section class="mv container bg-info d d-flex align-items-center justify-content-center py-5 rounded">
+        <section class=" container bg-info d d-flex align-items-center justify-content-center py-5 rounded">
             <div class="mx-5">
                 <h1 class="text-white">Ready to join?</h1>
                 <p class="text-white">If you like our institution,you should join with us</p>
@@ -190,6 +189,8 @@
             </div>
 
         </section>
+
+
 
 
 
