--- a/index.html
+++ b/index.html
@@ -189,7 +189,97 @@
             </div>
 
         </section>
-        <section>
+        <section class="container d-flex flex-column my-5">
+            <h1 class="text-center">Frequently Asked Questions</h1>
+            <p class="text-center">you can ask us any questions about our institution,we will answer you</p>
+
+            <div class="accordion my-5" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseOne">
+                            What is the difference between flex box and grid?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                        aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body">
+                            Flexbox is designed for one-dimensional layouts, and Grid for two-dimensional layouts. The
+                            approach of CSS Grid is the layout first, while the Flexbox approach is primarily the
+                            content. The Flexbox layout is best suited to application components and small-scale
+                            layouts, while the Grid layout is designed for larger-scale layouts that are not linear in
+                            design.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseTwo">
+                            what is the difference between tailwind and bootstrap?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingTwo">
+                        <div class="accordion-body">
+                            Developers describe Bootstrap as "Simple and flexible HTML, CSS, and JS for popular
+                            UI components and interactions". Bootstrap is the most popular HTML, CSS, and JS
+                            framework for developing responsive, mobile first projects on the web. On the other
+                            hand, Tailwind CSS is detailed as "A utility-first CSS framework for rapid UI
+                            development". Tailwind is different from frameworks like Bootstrap, Foundation, or Bulma
+                            in that it's not a UI kit. It doesn't have a default theme, and there are no build-in UI
+                            components. It comes with a menu of predesigned widgets to build your site with, but
+                            doesn't impose design decisions that are difficult to undo.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseThree">
+                            what is CSS box model?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingThree">
+                        <div class="accordion-body">
+                            A box in CSS consists of a content area, which is where any text, images, or other
+                            HTML elements are displayed. This is optionally surrounded by padding, a border, and a
+                            margin, on one or more sides. The box model describes how these elements work together
+                            to create a box as displayed by CSS In CSS, the term "box model" is used when talking
+                            about design and layout. The CSS box model is essentially a box that wraps around every
+                            HTML element. It consists of: margins, borders, padding, and the actual content.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseOne">
+                            what is semantic tag?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                        aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body">
+                            Semantic HTML elements are those that clearly describe their meaning in a human- and
+                            machine-readable way. Elements such as header , footer and article are all considered
+                            semantic because they accurately describe the purpose of the element and the type of
+                            content that is inside them.It is much easier to read. This is probably the first thing
+                            you will notice when looking at the first block of code using semantic elements. This is
+                            a small example, but as a programmer you can be reading through hundreds or thousands of
+                            lines of code. The easier it is to read and understand that code, the easier it makes
+                            your job.
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
 
 
         </section>
