--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>home of education</title>
+    <script src="https://kit.fontawesome.com/8d048c2316.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -283,32 +284,27 @@
 
 
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </main>
 
 
 
+    <footer class="bg-black d-flex flex-column rounded my-5">
+        <h1 class="text-white text-center mt-5">Home of edu</h1>
+        <p class="text-white text-center mt-5">Far far away, behind the word mountains,<br> far from the countries
+            Vokalia and
+            Consonantia,<br>
+            there live the blind texts.</p>
+        <p class="text-center">
+            <a class="text-decoration-none text-white" href="">privacy policy</a> <span class="text-white"> |
+            </span> <a class="text-decoration-none text-white" href="">Terms of use</a>
+        </p>
+        <p class="text-center">
+            <a class="text-white p-3" href=""><i class="fa-brands fa-facebook"></i></a>
+            <a class="text-white p-3" href=""><i class="fa-brands fa-twitter"></i></a>
+            <a class="text-white p-3" href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            <a class="text-white p-3" href=""><i class="fa-brands fa-yahoo"></i></a>
+        </p>
+    </footer>
 
 
 
