--- a/index.html
+++ b/index.html
@@ -284,6 +284,19 @@
 
 
         </section>
+
+        <section class="d-md-none d-none d-lg-block">
+            <h1 class="text-center my-5">Trusted by over 800+ companies</h1>
+            <div class="d-flex justify-content-center ">
+                <img class="p-3" src="images/company/company-1.png" alt="">
+                <img class="p-3" src="images/company/company-2.png" alt="">
+                <img class="p-3" src="images/company/company-3.png" alt="">
+                <img class="p-3" src="images/company/company-4.png" alt="">
+                <img class="p-3" src="images/company/company-5.png" alt="">
+                <img class="p-3" src="images/company/company-6.png" alt="">
+
+            </div>
+        </section>
     </main>
 
 
