--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>home of education</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8d048c2316.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="">
@@ -110,7 +114,7 @@
 
             <div class="row gy-2">
 
-                <div class="col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
+                <div class="sr col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
 
 
                     <img class="img-fluid" src="images/course/course-2.png" alt="">
@@ -122,7 +126,7 @@
                     </div>
                 </div>
 
-                <div class=" col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
+                <div class="sr col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
 
 
                     <img class="img-fluid" src="images/course/course-3.png" alt="">
@@ -133,7 +137,7 @@
                         <h5 class="text-primary fw-bold">Price : 20$</h5>
                     </div>
                 </div>
-                <div class=" col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
+                <div class="sr col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
 
 
                     <img class="img-fluid" src="images/course/course-4.png" alt="">
@@ -144,7 +148,7 @@
                         <h5 class="text-primary fw-bold">Price : 20$</h5>
                     </div>
                 </div>
-                <div class=" col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
+                <div class="sr col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
 
 
                     <img class="img-fluid" src="images/course/course-5.png" alt="">
@@ -155,7 +159,7 @@
                         <h5 class="text-primary fw-bold">Price : 20$</h5>
                     </div>
                 </div>
-                <div class=" col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
+                <div class="sr col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
 
 
                     <img class="img-fluid" src="images/course/course-6.png" alt="">
@@ -166,7 +170,7 @@
                         <h5 class="text-primary fw-bold">Price : 20$</h5>
                     </div>
                 </div>
-                <div class=" col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
+                <div class="sr col-lg-6 col-md-12 col-sm-12 p-3 border rounded-3 d-flex">
 
 
                     <img class="img-fluid" src="images/course/course-1.png" alt="">
